--- a/style.css
+++ b/style.css
@@ -1,4 +1,37 @@
 *{
+margin:0;
+padding:0;
+box-sizing:border-box;
+font-family:Arial, sans-serif;
+}
+html{
+scroll-behavior:smooth;
+}
+body{
+background:#f8fafc;
+color:#0f172a;
+}
+
+
+/* NAVBAR */
+.navbar{
+position:fixed;
+top:0;
+left:0;
+width:100%;
+background:white;
+padding:16px 32px;
+display:flex;
+justify-content:space-between;
+align-items:center;
+box-shadow:0 2px 6px rgba(0,0,0,0.1);
+z-index:100;
+}
+.navbar ul{
+display:flex;
+list-style:none;
+gap:20px;
+}
 .navbar a{
 text-decoration:none;
 color:#0f172a;
